<resources>
    <string name="app_name">Musapp</string>
    <string name="model">Model:</string>
    <string name="nr_steps">Nr. Steps:</string>
    <string name="first_note">Primer melody/pitches:</string>
    <string name="nr_outputs">Nr. Outputs:</string>
    <string name="make_the_magic_happen">Make the magic happen</string>
    <string name="your_request_is_being_processed">Your request is being processed</string>
    <string name="backing_chords">Backing chords:</string>
    <string name="config">Config:</string>
    <string name="rename">Rename</string>
    <string name="continue_song">Continue song</string>
    <string name="view_my_library">View my library</string>
    <string name="your_library_is_empty_try_adding_new_songs">Your library is empty. Try adding new songs.</string>
    <string name="welcome_o_your_musapp">Welcome to your Musapp</string>
    <string name="the_place_where_you_get_inspired_by_machine_learning_algorithms">The place where you get inspired by Machine Learning algorithms</string>
    <string name="create_new_songs">Create new songs</string>
    <string name="here_is_the_result">Here is the result:</string>
    <string name="_0_00">0:00</string>
    <string name="edit_song">Edit Song</string>

    <string-array name="TipModel">
        <item>Auto</item>
        <item>MelodyRNN</item>
        <item>DrumKit</item>
        <item>ImprovRNN</item>
        <item>PerformanceRNN</item>
        <item>PolyphonyRNN</item>
        <item>PianoRollRNN</item>
    </string-array>

    <string-array name="MelodyRNN">
        <item>basic_rnn</item>
        <item>mono_rnn</item>
        <item>lookback_rnn</item>
        <item>attention_rnn</item>
    </string-array>

    <string-array name="DrumKit">
        <item>drum_kit</item>
    </string-array>

    <string-array name="ImprovRNN">
        <item>chord_pitches_improv</item>
    </string-array>

    <string-array name="PerformanceRNN">
        <item>performance</item>
        <item>performance_with_dynamics</item>
        <item>performance_with_dynamics_and_modulo_encoding</item>
        <item>density_conditioned_performance_with_dynamics</item>
        <item>pitch_conditioned_performance_with_dynamics</item>
        <item>multiconditioned_performance_with_dynamics</item>
    </string-array>

    <string-array name="PolyphonyRNN">
        <item>performance</item>
    </string-array>


    <string-array name="PianoRollRNN">
        <item>performance</item>
    </string-array>


    <string-array name="NrSteps">
        <item>Auto</item>
        <item>Short(~16sec)</item>
        <item>Medium(~32sec)</item>
        <item>Long(~1min)</item>
    </string-array>

    <string-array name="Primers">
        <item>Auto</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>

    <string-array name="NrOutputs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string-array name="Chords">
        <item>Auto</item>
        <item>C</item>
        <item>F</item>
        <item>Bb</item>
        <item>Eb</item>
        <item>Ab</item>
        <item>Db</item>
        <item>G</item>
        <item>Cb</item>
        <item>Gb</item>
        <item>D</item>
        <item>A</item>
        <item>E</item>
        <item>B</item>
        <item>Am</item>
        <item>Dm</item>
        <item>Gm</item>
        <item>Cm</item>
        <item>Fm</item>
        <item>Bbm</item>
        <item>Ebm</item>
        <item>Abm</item>
        <item>Em</item>
        <item>Bm</item>
        <item>Adim</item>
        <item>Ddim</item>
        <item>Gdim</item>
        <item>Cdim</item>
        <item>Fdim</item>
        <item>Edim</item>
        <item>Bdim</item>
    </string-array>

    <string-array name="ModelIsMelodyRNN">
        <item>Basic</item>
        <item>Mono</item>
        <item>Lookback</item>
        <item>Attention</item>
    </string-array>

    <string-array name="ModelIsPerfromance">
        <item>Performance</item>
        <item>Dynamics</item>
        <item>Modulo encoding</item>
        <item>Density Conditioned</item>
        <item>Pitch Conditioned</item>
        <item>Multiconditioned</item>
    </string-array>

    <string-array name="TipModelContinue">
        <item>MelodyRNN</item>
        <item>DrumKit</item>
        <item>PerformanceRNN</item>
        <item>PolyphonyRNN</item>
        <item>PianoRollRNN</item>
    </string-array>

</resources>