<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularContinueActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient4"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    android:padding="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:textColor="#000000"
        android:textSize="18sp"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_model_continue"
        android:entries="@array/TipModelContinue"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:id="@+id/idTextViewConfig_continue"
        android:visibility="gone"
        android:textColor="#000000"
        android:textSize="18sp"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_config_continue"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LinearLayoutElse_continue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nr_steps"
            android:textColor="#000000"
            android:textSize="18sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_stepsElse_continue"
            android:entries="@array/NrSteps"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nr_outputs"
            android:textColor="#000000"
            android:textSize="18sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_NrOutPutElse_continue"
            android:entries="@array/NrOutputs"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="magicContinue"
        android:text="@string/continue_song"
        android:textColor="@android:color/background_light"
        android:background="@drawable/button_bg"
        />



    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333334">

        <ImageView
            android:id="@+id/idImgViewLibraryContinue"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/idImgViewCreateContinue"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>